# meta2

./: .dockerignore  .gitignore  CHANGELOG.md  DEV_STATUS.md  Dockerfile  FUTURE_DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS.md  INTEGRATION_ROADMAP.md  Makefile  PUZZLE_RECONSTRUCTION.md  README.md  REPORT.md  ROADMAP.md  STATUS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
benchmarks/: __init__.py  bench_assembly_methods.py  bench_compat_matrix.py  bench_descriptors.py  bench_memory.py  bench_pipeline_e2e.py  bench_preprocessing.py  bench_scalability.py  bench_verification.py  conftest.py  pytest.ini  utils.py
benchmarks/results/: BASELINE.md  scalability_run.txt
puzzle_reconstruction/: __init__.py  clustering.py  config.py  export.py  models.py  pipeline.py
puzzle_reconstruction/algorithms/: __init__.py  boundary_descriptor.py  bridge.py  color_palette.py  color_space.py  contour_smoother.py  contour_tracker.py  descriptor_aggregator.py  descriptor_combiner.py  edge_comparator.py  edge_extractor.py  edge_filter.py  edge_profile.py  edge_scorer.py  fourier_descriptor.py  fragment_aligner.py  fragment_classifier.py  fragment_quality.py  gradient_flow.py  homography_estimator.py  line_detector.py  overlap_resolver.py  patch_aligner.py  patch_matcher.py  path_planner.py  position_estimator.py  region_scorer.py  region_segmenter.py  region_splitter.py  rotation_estimator.py  score_aggregator.py  seam_evaluator.py  shape_context.py  sift_matcher.py  synthesis.py  texture_descriptor.py  wavelet_descriptor.py  word_segmentation.py  zernike_descriptor.py
puzzle_reconstruction/assembly/: __init__.py  annealing.py  ant_colony.py  assembly_state.py  astar.py  beam_search.py  bridge.py  candidate_filter.py  canvas_builder.py  collision_detector.py  cost_matrix.py  exhaustive.py  fragment_arranger.py  fragment_mapper.py  fragment_scorer.py  fragment_sequencer.py  fragment_sorter.py  gamma_optimizer.py  gap_analyzer.py  genetic.py  greedy.py  hierarchical.py  layout_builder.py  layout_refiner.py  mcts.py  overlap_resolver.py  parallel.py  placement_optimizer.py  position_estimator.py  rl_agent.py  score_tracker.py  sequence_planner.py
puzzle_reconstruction/io/: __init__.py  image_loader.py  metadata_writer.py  result_exporter.py
puzzle_reconstruction/matching/: __init__.py  affine_matcher.py  boundary_matcher.py  bridge.py  candidate_ranker.py  color_match.py  compat_matrix.py  consensus.py  curve_descriptor.py  dtw.py  edge_comparator.py  feature_match.py  geometric_match.py  global_matcher.py  graph_match.py  icp.py  matcher_registry.py  orient_matcher.py  pair_scorer.py  pairwise.py  patch_matcher.py  patch_validator.py  rotation_dtw.py  score_aggregator.py  score_combiner.py  score_normalizer.py  seam_score.py  shape_matcher.py  spectral_matcher.py  text_flow.py  texture_match.py
puzzle_reconstruction/preprocessing/: __init__.py  adaptive_threshold.py  augment.py  background_remover.py  binarizer.py  chain.py  channel_splitter.py  color_norm.py  color_normalizer.py  contour.py  contour_processor.py  contrast.py  contrast_enhancer.py  denoise.py  deskewer.py  document_cleaner.py  edge_detector.py  edge_enhancer.py  edge_sharpener.py  fragment_cropper.py  frequency_analyzer.py  frequency_filter.py  gradient_analyzer.py  illumination_corrector.py  illumination_equalizer.py  illumination_normalizer.py  image_enhancer.py  morphology_ops.py  multiscale_segmenter.py  noise_analyzer.py  noise_filter.py  noise_reducer.py  noise_reduction.py  orientation.py  patch_normalizer.py  patch_sampler.py  perspective.py  quality_assessor.py  segmentation.py  skew_correction.py  (+3 more)
puzzle_reconstruction/scoring/: __init__.py  boundary_scorer.py  bridge.py  consistency_checker.py  evidence_aggregator.py  gap_scorer.py  global_ranker.py  match_evaluator.py  match_scorer.py  pair_filter.py  pair_ranker.py  rank_fusion.py  score_normalizer.py  threshold_selector.py
puzzle_reconstruction/ui/: __init__.py  viewer.py
puzzle_reconstruction/utils/: __init__.py  alignment_utils.py  annealing_schedule.py  annealing_score_utils.py  array_utils.py  assembly_config_utils.py  assembly_records.py  assembly_score_utils.py  batch_processor.py  bbox_utils.py  blend_utils.py  bridge.py  cache.py  cache_manager.py  candidate_rank_utils.py  canvas_build_utils.py  classification_freq_records.py  clustering_utils.py  color_edge_export_utils.py  color_hist_utils.py  color_utils.py  (+111 more)
tests/: conftest.py  test_adaptive_threshold.py  test_adaptive_threshold_extra.py  test_affine_matcher.py  test_affine_matcher_extra.py  test_algorithms_boundary_descriptor.py  test_algorithms_boundary_descriptor_extra.py  test_algorithms_bridge.py  test_algorithms_bridge_extra.py  test_algorithms_color_palette.py  test_algorithms_color_palette_extra.py  test_algorithms_color_space.py  test_algorithms_color_space_extra.py  test_algorithms_contour_smoother.py  test_algorithms_contour_smoother_extra.py  test_algorithms_contour_tracker.py  test_algorithms_contour_tracker_extra.py  test_algorithms_descriptor_aggregator.py  test_algorithms_descriptor_aggregator_extra.py  test_algorithms_descriptor_combiner.py  test_algorithms_descriptor_combiner_extra.py  test_algorithms_edge_comparator.py  test_algorithms_edge_comparator_extra.py  test_algorithms_edge_extractor.py  test_algorithms_edge_extractor_extra.py  test_algorithms_edge_filter.py  test_algorithms_edge_filter_extra.py  test_algorithms_edge_profile.py  test_algorithms_edge_profile_extra.py  test_algorithms_edge_scorer.py  test_algorithms_edge_scorer_extra.py  test_algorithms_fourier_descriptor.py  test_algorithms_fourier_descriptor_extra.py  test_algorithms_fractal_box_counting.py  test_algorithms_fractal_box_counting_extra.py  test_algorithms_fractal_css.py  test_algorithms_fractal_css_extra.py  test_algorithms_fractal_divider.py  test_algorithms_fractal_divider_extra.py  test_algorithms_fractal_ifs.py  (+1052 more)
tools/: __init__.py  benchmark.py  evaluate.py  mix_documents.py  profile.py  registry.py  server.py  tear_generator.py
(+35 files in other folders)
