[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "puzzle-reconstruction"
version         = "0.2.0"
description     = "Reconstruction of shredded/torn documents from scanned fragments"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
authors         = [{ name = "puzzle-reconstruction contributors" }]
keywords        = ["forensics", "document-reconstruction", "fractal", "puzzle", "ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "scikit-image>=0.22",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3",
]
yaml = [
    "pyyaml>=6.0",
]
pdf = [
    "reportlab>=4.0",
    "fpdf2>=2.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-Pillow",
]
api = [
    "flask>=3.0",
]
all = [
    "puzzle-reconstruction[ocr,yaml,pdf,api,dev]",
]

[project.scripts]
puzzle-reconstruct = "main:main"
puzzle-benchmark   = "tools.benchmark:main"
puzzle-generate    = "tools.tear_generator:main"
puzzle-mix         = "tools.mix_documents:main"
puzzle-server      = "tools.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["puzzle_reconstruction*", "tools*"]

# ── pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
python_files  = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: end-to-end tests (slower, ~1-5s each)",
    "slow: very slow tests (>10s)",
]

# ── ruff (linter/formatter) ────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore         = ["E501"]      # длинные строки — не проблема в научном коде

[tool.ruff.isort]
known-first-party = ["puzzle_reconstruction", "tools"]

# ── mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version          = "3.11"
warn_unused_configs     = true
ignore_missing_imports  = true   # numpy, cv2 stubs могут отсутствовать
